--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy":"http://localhost:3000"
   },
   "rules": {
     "react/react-in-jsx-scope": "off"
