--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "solomon-courses-frontend",
+  "name": "solomon-courses",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-loading": "^2.0.3",
     "react-notifications": "^1.7.4",
-    "react-redux": "^9.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^5.0.1",
+    "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^3.1.0",
-    "web-vitals": "^2.1.4",
-    "proxy":"http://localhost:3000"
-  },
-  "rules": {
-    "react/react-in-jsx-scope": "off"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
