--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,7 +18,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "redux-devtools-extension": "^2.13.9",
+    "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
